--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "websockets>=12.0",
     "httpx>=0.25.0",
+    "sourcemap>=0.2.1",
 ]
 
 [project.scripts]
